--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -99,7 +99,7 @@
             </section>
             <section class="features">
                 <div class="features-content">
-                    <h2> Features </h2>
+                    <h2 class="titles-content"> Features </h2>
                     <p class="info-p">
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                         type and an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -129,7 +129,7 @@
                 </div>
             </section>
             <section class="why-trackgenix">
-                <h2> WHY TRACKGENIX? </h2>
+                <h2 class="titles-content"> WHY TRACKGENIX? </h2>
                 <img src="img/content-image-three.png" class="image">
                 <h3> Subheader </h3>
                 <p class="info-p">
@@ -172,7 +172,7 @@
                 </button>
             </section>
             <section id="contact-us">
-                <h2> CONTACT US </h2>
+                <h2 class="titles-content"> CONTACT US </h2>
                 <form>
                     <label> Name </label>
                     <input id= "name" type="text" placeholder="Insert your name">
@@ -186,8 +186,8 @@
                         <option> Human Resources </option>
                     </select>
                     <textarea id="message" placeholder="write us a message..."></textarea>
-                    <input type="submit" value="Send message">
-                    <input type="button" value="Reset">
+                    <input type="submit" id="contact-send" value="Send message">
+                    <input type="button" id="contact-reset" value="Reset">
                 </form>
             </section>
         </section>
